tests/ui/object-lifetime/object-lifetime-default-assoc-ty-self-ty-static.stderr
error[E0228]: cannot deduce the lifetime bound for this trait object type from context
  --> $DIR/object-lifetime-default-assoc-ty-self-ty-static.rs:9:18
   |
LL | fn f<'r>(x: &'r <dyn Inner as Outer>::Ty) { /*check*/ g(x) }
   |                  ^^^^^^^^^
   |
help: please supply an explicit bound
   |
LL | fn f<'r>(x: &'r <dyn Inner + /* 'a */ as Outer>::Ty) { /*check*/ g(x) }
   |                            ++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0228`.
